Always ensure show more is left aligned if no summary

--- a/client/web/src/components/FilteredConnection/FilteredConnection.scss
+++ b/client/web/src/components/FilteredConnection/FilteredConnection.scss
@@ -105,5 +105,6 @@ $compact-summary-divider: solid 1px var(--border-color-2);
 
     &__show-more {
         flex: 0 0 auto;
+        margin-left: auto;
     }
 }
